--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,23 +9,27 @@ find_package(glfw3 REQUIRED)
 
 include_directories("src")
 
-add_executable(untitled70 src/main.cpp
-        src/vk/instance.h
-        src/base/exception.h
-        src/vk/instance.cc
-        src/vk/debug.cc
-        src/vk/common.h
-        src/vk/common.cc
-        src/glfw/window.h
-        src/glfw/window.cc
-        src/glfw/exception.h
+add_executable(untitled70
+        src/main.cpp
         src/engine.h
         src/engine.cc
+        src/base/exception.h
+        src/vk/instance.h
+        src/vk/instance.cc
+        src/vk/debug.cc
+        src/vk/debug.h
         src/vk/device.h
         src/vk/device.cc
         src/vk/surface.h
-        src/vk/surface.cc)
+        src/vk/surface.cc
+        src/vk/swap_chain.h
+        src/glfw/window.h
+        src/glfw/window.cc
+        src/glfw/exception.h
+        src/vk/common.h
+        src/vk/common.cc
+)
 
 target_link_libraries(untitled70 Vulkan::Vulkan glfw)
 
-# add_compile_definitions(DEBUG)
+add_compile_definitions(DEBUG)
