fully decomposed need to merge

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,7 +22,11 @@ add_executable(untitled7
         src/vk/device.h
         src/vk/device.c
         src/vk/sync.h
-        src/vk/sync.c)
+        src/vk/sync.c
+        src/vk/command.h
+        src/vk/command.c
+        src/vk/render.h
+        src/vk/render.c)
 
 target_link_libraries(untitled7 Vulkan::Vulkan glfw)
 
