--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "third_party/stb"]
 	path = third_party/stb
 	url = https://github.com/nothings/stb
+[submodule "third_party/earcut.hpp"]
+	path = third_party/earcut.hpp
+	url = git@github.com:mapbox/earcut.hpp.git
