--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,7 +39,8 @@ add_executable(vk_engine
         ${SRC_DIR}/obj/parser.h
         ${SRC_DIR}/obj/parser.cc
         ${SRC_DIR}/backend/render/types.h
-        ${SRC_DIR}/backend/render/types.cc
+        ${SRC_DIR}/backend/render/model.h
+        ${SRC_DIR}/backend/render/model.cc
         ${SRC_DIR}/backend/render/data.cc
         ${SRC_DIR}/backend/render/data.h
         ${SRC_DIR}/backend/render/vk/config.cc
