model controller added

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,6 +41,7 @@ add_executable(vk_engine
         ${SRC_DIR}/backend/render/types.h
         ${SRC_DIR}/backend/render/model.h
         ${SRC_DIR}/backend/render/model.cc
+        ${SRC_DIR}/backend/render/model_controller.h
         ${SRC_DIR}/backend/render/data.cc
         ${SRC_DIR}/backend/render/data.h
         ${SRC_DIR}/backend/render/vk/config.h
