added gl plugins, axis are synced gl with vulkan

--- a/src/backend/gl/renderer/CMakeLists.txt
+++ b/src/backend/gl/renderer/CMakeLists.txt
@@ -5,6 +5,7 @@ find_package(OpenGL REQUIRED)
 set(SOURCES
         error.h
         error.cc
+        plugin.cc
         renderer.cc
         renderer.h
 )
@@ -13,7 +14,10 @@ add_library(gl_renderer SHARED ${SOURCES})
 
 target_link_libraries(gl_renderer PUBLIC
         obj
-        renderer
         OpenGL::GL
         GLEW::GLEW
 )
+
+add_library(gl_renderer-plugin SHARED plugin.cc)
+
+target_link_libraries(gl_renderer-plugin PUBLIC gl_renderer)
