--- a/src/backend/gl/window/glfw/CMakeLists.txt
+++ b/src/backend/gl/window/glfw/CMakeLists.txt
@@ -6,6 +6,10 @@ set(SOURCES
         window.h
 )
 
-add_library(gl_glfw_window SHARED ${SOURCES})
+add_library(glfw_gl_window STATIC ${SOURCES})
 
-target_link_libraries(gl_glfw_window PUBLIC glfw_internal)
+target_link_libraries(glfw_gl_window PUBLIC glfw_internal)
+
+add_library(glfw_gl_window-plugin SHARED plugin.cc)
+
+target_link_libraries(glfw_gl_window-plugin PUBLIC glfw_gl_window)
