--- a/src/backend/vk/window/glfw/CMakeLists.txt
+++ b/src/backend/vk/window/glfw/CMakeLists.txt
@@ -12,6 +12,6 @@ add_library(glfw_vk_window STATIC ${SOURCES})
 
 target_link_libraries(glfw_vk_window PUBLIC Vulkan::Vulkan glfw_internal)
 
-add_library(glfw_vk_window-entry SHARED entry.cc)
+add_library(glfw_vk_window-plugin SHARED plugin.cc)
 
-target_link_libraries(glfw_vk_window-entry PUBLIC glfw_vk_window)
+target_link_libraries(glfw_vk_window-plugin PUBLIC glfw_vk_window)
