--- a/src/engine/CMakeLists.txt
+++ b/src/engine/CMakeLists.txt
@@ -1,18 +1,18 @@
 
 set(SOURCES
-        data_util.cc
-        data_util.h
-        instance.h
-        loader.h
-        model.cc
-        model.h
-        renderer.h
-        renderer_entry.h
-        renderer_loader.h
-        types.h
-        window.h
-        window_entry.h
-        window_loader.h
+        render/data_util.h
+        render/model.h
+        render/renderer.cc
+        render/renderer.h
+        render/plugin.h
+        render/types.h
+
+        window/instance.h
+        window/window.cc
+        window/window.h
+        window/plugin.h
+
+        dll_loader.h
 )
 
 add_library(renderer STATIC ${SOURCES})
