--- a/src/backend/CMakeLists.txt
+++ b/src/backend/CMakeLists.txt
@@ -1,6 +1,8 @@
 
-add_subdirectory(vk)
-add_subdirectory(gl)
+add_subdirectory(vk/renderer)
+add_subdirectory(vk/window/glfw)
+add_subdirectory(vk/window/sdl)
 
-add_subdirectory(internal/glfw)
-add_subdirectory(internal/sdl)
+add_subdirectory(gl/renderer)
+add_subdirectory(gl/window/glfw)
+add_subdirectory(gl/window/sdl)
