--- a/src/backend/gl/window/glfw/CMakeLists.txt
+++ b/src/backend/gl/window/glfw/CMakeLists.txt
@@ -1,15 +1,12 @@
 
-set(SOURCES
+find_package(glfw3 REQUIRED)
+
+add_library(glfw_gl_window SHARED
         error.h
         instance.h
+        plugin.cc
         window.cc
         window.h
 )
 
-add_library(glfw_gl_window STATIC ${SOURCES})
-
-target_link_libraries(glfw_gl_window PUBLIC glfw_internal)
-
-add_library(glfw_gl_window-plugin SHARED plugin.cc)
-
-target_link_libraries(glfw_gl_window-plugin PUBLIC glfw_gl_window)
+target_link_libraries(glfw_gl_window PUBLIC glfw)
