--- a/src/backend/vk/window/sdl/CMakeLists.txt
+++ b/src/backend/vk/window/sdl/CMakeLists.txt
@@ -1,16 +1,16 @@
 
-set(SOURCES
+find_package(Vulkan REQUIRED)
+find_package(SDL2 REQUIRED)
+
+add_library(sdl_vk_window SHARED
         error.h
         instance.h
         instance.cc
+        plugin.cc
         window.h
         window.cc
 )
 
-add_library(sdl_vk_window STATIC ${SOURCES})
+target_include_directories(sdl_vk_window PUBLIC ${SDL2_INCLUDE_DIRS})
 
-target_link_libraries(sdl_vk_window PUBLIC Vulkan::Vulkan sdl_internal)
-
-add_library(sdl_vk_window-plugin SHARED plugin.cc)
-
-target_link_libraries(sdl_vk_window-plugin PUBLIC sdl_vk_window)
+target_link_libraries(sdl_vk_window PUBLIC Vulkan::Vulkan ${SDL2_LIBRARIES})
