--- a/src/backend/gl/window/sdl/CMakeLists.txt
+++ b/src/backend/gl/window/sdl/CMakeLists.txt
@@ -1,15 +1,13 @@
 
-set(SOURCES
+find_package(SDL2 REQUIRED)
+
+add_library(sdl_gl_window SHARED
         error.h
         instance.h
+        plugin.cc
         window.cc
         window.h
 )
 
-add_library(sdl_gl_window STATIC ${SOURCES})
-
-target_link_libraries(sdl_gl_window PUBLIC sdl_internal)
-
-add_library(sdl_gl_window-plugin SHARED plugin.cc)
-
-target_link_libraries(sdl_gl_window-plugin PUBLIC sdl_gl_window)
+target_include_directories(sdl_gl_window PUBLIC ${SDL2_INCLUDE_DIRS})
+target_link_libraries(sdl_gl_window PUBLIC ${SDL2_LIBRARIES})
