refactor code and cmake macro for shaders added

--- a/src/backend/gl/renderer/CMakeLists.txt
+++ b/src/backend/gl/renderer/CMakeLists.txt
@@ -2,12 +2,20 @@
 find_package(GLEW REQUIRED)
 find_package(OpenGL REQUIRED)
 
+make_shaders(shaders.cc.in shaders.cc)
+
 add_library(gl_renderer SHARED
         error.h
         error.cc
         plugin.cc
+        object.h
+        object_loader.cc
+        object_loader.h
+        handle.h
         renderer.cc
         renderer.h
+        shaders.cc
+        shaders.h
         window.h
 )
 
