--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,9 @@ set(CMAKE_CXX_STANDARD 17)
 
 set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 
+
+include(cmake/shaders.cmake)
+
 include_directories(src)
 include_directories(third_party/glm)
 include_directories(third_party/stb)
