insert shaders by name, and small refactor

--- a/src/backend/gl/renderer/shaders.cc.in
+++ b/src/backend/gl/renderer/shaders.cc.in
@@ -7,11 +7,11 @@ namespace gl {
 std::vector<Shader> GetShaders() {
     return {
         {
-            R"(@VERT@)",
+            R"(@simple.vert@)",
             GL_VERTEX_SHADER
         },
         {
-            R"(@FRAG@)",
+            R"(@simple.frag@)",
             GL_FRAGMENT_SHADER
         }
     };
