remade gl handle class, separated

--- a/src/backend/gl/renderer/CMakeLists.txt
+++ b/src/backend/gl/renderer/CMakeLists.txt
@@ -11,6 +11,7 @@ add_library(gl_renderer SHARED
         object.h
         object_loader.cc
         object_loader.h
+        handle.cc
         handle.h
         renderer.cc
         renderer.h
